--- a/sites/all/themes/custom/badcamp2016/scss/components/_menu.scss
+++ b/sites/all/themes/custom/badcamp2016/scss/components/_menu.scss
@@ -5,6 +5,7 @@
   @include breakpoint(medium up) {
     float: right;
     margin-right: 60px;
+    margin-top:34px;
   }
   @include breakpoint(small only) {
     margin-right: 0;
